Changed faq page classes to faq instead of service. Added class for faq-questions. CSS: changed services h2 font-size to 2rem, changed general h2 color to gold, removed #project p and placed code under project-description.

--- a/english/faq.html
+++ b/english/faq.html
@@ -60,12 +60,12 @@
     </header>
 
     <main>
-        <section class="service-page">
+        <section class="faq-page">
             <h2><span>FAQ's</span></h2>
-            <div class="services">
+            <div class="faqs">
                 <div class="content-wrapper">
                     <article class="faq">
-                        <h4><span>What's a responsive website, and why should I have one?</span></h4>
+                        <h4 class="faq-questions">What's a responsive website, and why should I have one?</h4>
                         <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
                             depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
                             from mobile devices and that number will only increase. If your website is not
@@ -74,8 +74,8 @@
                             laptop) then most users won't stick around for any longer than a few seconds. Also, Google's algorithms tend to favour mobile-friendly websites, meaning you or your company will not rank as highly on a Google search as a company with a fully responsive site. And nobody wants that!.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my
-                                website?</span></h4>
+                        <h4 class="faq-questions">I haven't been losing any clients/fans, so why should I worry about optimising my
+                                website?</h4>
                         <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
                             artist or a small business, you should obviously be always trying to attract new fans and
                             clients, preferably without losing existing ones. If your website is old, poorly designed,
@@ -85,8 +85,8 @@
                             eventually convert them into paying customers.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
-                                bother with anything else?</span></h4>
+                        <h4 class="faq-questions">My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
+                                bother with anything else?</h4>
                         <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products
                             and creating
                             content that shares your know-how with the world, here's some data to think about.
