--- a/english/services.html
+++ b/english/services.html
@@ -60,7 +60,7 @@
 
   <main>
     <section class="service-page">
-      <h2><span>Services</span></h2>
+      <h2>Services</h2>
         <div class="services">
           <div class="content-wrapper">
             <article class="services-info">
