--- a/english/faq.html
+++ b/english/faq.html
@@ -66,7 +66,7 @@
                 <div class="content-wrapper">
                     <article class="faq">
                         <h4 class="faq-questions">What's a responsive website, and why should I have one?</h4>
-                        <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
+                        <p class="faq-answers">A responsive site is one that adapts to whatever device is being used. It changes appearence
                             depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
                             from mobile devices and that number will only increase. If your website is not
                             mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on
@@ -76,7 +76,7 @@
                     <article class="faq">
                         <h4 class="faq-questions">I haven't been losing any clients/fans, so why should I worry about optimising my
                                 website?</h4>
-                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
+                        <p class="faq-answers">First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
                             artist or a small business, you should obviously be always trying to attract new fans and
                             clients, preferably without losing existing ones. If your website is old, poorly designed,
                             or non responsive (see above) then keeping those potential customers for more than 30
@@ -87,7 +87,7 @@
                     <article class="faq">
                         <h4 class="faq-questions">My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
                                 bother with anything else?</h4>
-                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products
+                        <p class="faq-answers">Well, a Facebook page is NOT a website and while Instagram is great for publicising products
                             and creating
                             content that shares your know-how with the world, here's some data to think about.
                             Only 55% of the world’s population is on social media. The US and the UK both have just over
