Added all faq classes to the page, as per faq english

--- a/portuguese/faq.html
+++ b/portuguese/faq.html
@@ -60,22 +60,22 @@
     </header>
 
     <main>
-        <section class="service-page">
+        <section class="faq-page">
             <h1><span>FAQ's</span></h1>
-            <div class="services">
+            <div class="faqs">
                 <div class="content-wrapper">
                     <article class="faq">
-                        <h4><span>O que é um site responsivo e por que devo ter um?</span></h4>
-                        <p>Um site responsivo é aquele que se adapta a qualquer dispositivo que esteja sendo utilizado. Ele muda de aparência dependendo do tamanho e orientação da tela. A partir de 2022, mais de 60% do tráfego da Internet vem de dispositivos móveis e esse número só aumentará. Se o seu site não for compatível com dispositivos móveis (em outras palavras, ele não parece tão bom e responde tão bem em diferentes dispositivos móveis quanto em um laptop), a maioria dos usuários não permanecerá por mais tempo do que alguns segundos. Além disso, os algoritmos do Google tendem a favorecer sites compatíveis com dispositivos móveis, o que significa que você ou sua empresa não terão uma classificação tão alta em uma pesquisa do Google quanto uma empresa com um site totalmente responsivo. E ninguém quer isso!</p>
+                        <h4 class="faq-questions">O que é um site responsivo e por que devo ter um?</h4>
+                        <p class="faq-answers">Um site responsivo é aquele que se adapta a qualquer dispositivo que esteja sendo utilizado. Ele muda de aparência dependendo do tamanho e orientação da tela. A partir de 2022, mais de 60% do tráfego da Internet vem de dispositivos móveis e esse número só aumentará. Se o seu site não for compatível com dispositivos móveis (em outras palavras, ele não parece tão bom e responde tão bem em diferentes dispositivos móveis quanto em um laptop), a maioria dos usuários não permanecerá por mais tempo do que alguns segundos. Além disso, os algoritmos do Google tendem a favorecer sites compatíveis com dispositivos móveis, o que significa que você ou sua empresa não terão uma classificação tão alta em uma pesquisa do Google quanto uma empresa com um site totalmente responsivo. E ninguém quer isso!</p>
                     </article>
                     <article class="faq">
-                        <h4><span>Não tenho perdido nenhum cliente/fã, então por que devo me preocupar em otimizar meu
-                            website?</span></h4>
-                        <p>Em primeiro lugar, se não perder clientes é sua métrica, é um plano de negócios muito ruim. Como artista ou pequeno empresário, obviamente você deve estar sempre tentando atrair novos fãs e clientes, de preferência sem perder os já existentes. Se o seu site for antigo, mal projetado ou não responsivo (veja acima), será difícil manter esses clientes em potencial por mais de 30 segundos. Otimizar seu site pode ajudar a atrair novos clientes, mantê-los envolvidos e, eventualmente, convertê-los em clientes pagantes.</p>
+                        <h4 class="faq-questions">Não tenho perdido nenhum cliente/fã, então por que devo me preocupar em otimizar meu
+                            website?</h4>
+                        <p class="faq-answers">Em primeiro lugar, se não perder clientes é sua métrica, é um plano de negócios muito ruim. Como artista ou pequeno empresário, obviamente você deve estar sempre tentando atrair novos fãs e clientes, de preferência sem perder os já existentes. Se o seu site for antigo, mal projetado ou não responsivo (veja acima), será difícil manter esses clientes em potencial por mais de 30 segundos. Otimizar seu site pode ajudar a atrair novos clientes, mantê-los envolvidos e, eventualmente, convertê-los em clientes pagantes.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>Minha página do Facebook é meu 'site' e eu uso o Instagram para publicidade. Por que eu deveria me preocupar com qualquer outra coisa?</span></h4>
-                        <p>Bem, uma página do Facebook NÃO é um site e, embora o Instagram seja ótimo para divulgar produtos e criar conteúdo que compartilhe seu 'know-how' com o mundo, aqui estão alguns dados para pensar.
+                        <h4 class="faq-questions">Minha página do Facebook é meu 'site' e eu uso o Instagram para publicidade. Por que eu deveria me preocupar com qualquer outra coisa?</h4>
+                        <p class="faq-answers">Bem, uma página do Facebook NÃO é um site e, embora o Instagram seja ótimo para divulgar produtos e criar conteúdo que compartilhe seu 'know-how' com o mundo, aqui estão alguns dados para pensar.
                             Apenas 55% da população mundial está nas redes sociais. Os EUA e o Reino Unido têm pouco mais de 65% de usuários ativos de mídia social. O Facebook tem uma base de usuários de pouco menos de 3 bilhões e há cerca de 1,5 bilhão de usuários ativos no Instagram. Esses são números impressionantes e, obviamente, o alcance das mídias sociais é enorme, especialmente para pequenas empresas, mas vamos inverter esses números.
                             Cerca de 30% das populações dos EUA e do Reino Unido não usam mídias sociais. Quase 1 bilhão de pessoas não usam o Facebook e 42% dos internautas não usam o Instagram. Portanto, se você usar apenas essas duas plataformas para alcançar fãs e clientes, estará perdendo um grande número de clientes em potencial. Portanto, é realmente um acéfalo ter um site. É um lugar onde clientes e potenciais clientes que não usam mídias sociais sempre podem encontrar informações sobre seus serviços, mercadorias ou shows, independentemente das últimas tendências de mídia social. Um site também é o melhor lugar para construir sua lista de e-mail.
                         </p>
