Corrected links to css, english and portuguese files

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/landing.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/landing.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
@@ -41,10 +41,10 @@
         <div class="content-wrapper">
           <div class="choose-language">
             <div class="english">
-            <h1><a href="../english/index.html">English</a></h1>
+            <h1><a href="english/index.html">English</a></h1>
             </div>
             <div class="portuguese">
-            <h1><a href="../portuguese/index.html">Portuguese</a></h1>
+            <h1><a href="portuguese/index.html">Portuguese</a></h1>
             </div>
           </div>
         </div>
