Removed Git and Github skills in portfolio section

--- a/english/index.html
+++ b/english/index.html
@@ -95,7 +95,7 @@
                 <h3 class="project-title">Guess the Word</h3>
                 <p class="project-description">An updated version of a Skillcrush project. Enter the Upside Down, and test your knowledge of the Stranger Things world. This game includes floating dust particles and quotes from all four seasons.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  Javascript, JSX, Git, GitHub, HTML, CSS </p>
+                  Javascript, JSX, HTML, CSS </p>
                 <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
@@ -122,7 +122,7 @@
                 <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
                   for a specific repo, or click on one for more details and a link to the repository.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
+                  JavaScript, API, Components, CodeSandbox</p>
                 <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
                   Page</a>
               </div>
@@ -137,7 +137,7 @@
                 <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
                   desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
+                  HTML, CSS, Flexbox, Responsive Design, Photoshop</p>
                 <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
                   Page</a>
               </div>
@@ -152,7 +152,7 @@
                 <p class="project-description">A simple landing page that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
+                  HTML, CSS, Flexbox, Photoshop</p>
                 <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
