Removed git and github skills in portuguese portfolio section

--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -94,7 +94,7 @@
                 <h3 class="project-title">Guess the Word</h3>
                 <p class="project-description">Uma versão atualizada de um projeto Skillcrush. Entre no Mundo Invertido e teste seus conhecimentos sobre o universo de Stranger Things. Este jogo inclui partículas de poeira flutuantes e citações de todas as quatro temporadas.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  Javascript, JSX, Git, GitHub, HTML, CSS </p>
+                  Javascript, JSX, HTML, CSS </p>
                 <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
@@ -119,7 +119,7 @@
                 <h3 class="project-title">Github Repo Gallery</h3>
                 <p class="project-description">Criado usando a API do GitHub para extrair dados do meu portfólio do GitHub. Pesquise um repositório específico ou clique em qualquer um para obter mais detalhes e um link para o repositório.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
+                  JavaScript, API, Components, CodeSandbox</p>
                 <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
                   Page</a>
               </div>
@@ -133,7 +133,7 @@
                 <h3 class="project-title">Unplugged</h3>
                 <p class="project-description">Um site responsivo de várias páginas que se adapta a telas de dispositivos móveis, tabletes e desktops. Um design versátil que pode ser reaproveitado para vários cenários.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
+                  HTML, CSS, Flexbox, Responsive Design, Photoshop</p>
                 <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
@@ -146,7 +146,7 @@
                 <h3 class="project-title">Rogue Pickings</h3>
                 <p class="project-description">Uma página de destino simples que seria ótima para um café local ou uma barraca de comida. Convertido de um site imóvel em um design responsivo usando Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
+                  HTML, CSS, Flexbox, Photoshop</p>
                 <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
